# EasyCat

./: .gitignore  README.md  config.example.toml  pyproject.toml  test.db
easycat/: __init__.py  app.py  config.py
easycat/api/: __init__.py  sync.py
easycat/auth/: __init__.py
easycat/db/: __init__.py  migrations.py  models.py  repository.py
easycat/rules/: __init__.py
easycat/screens/: __init__.py  categories.py  transactions.py
easycat/widgets/: __init__.py  transaction_table.py
memory_bank/: activeContext.md  progress.md  projectbrief.md
tests/: __init__.py  conftest.py  test_api.py  test_app.py  test_auth.py  test_config.py  test_migrations.py  test_models.py  test_repository.py  test_rules.py  test_screens.py  test_sync.py  test_widgets.py
