[project]
name = 'easycat'
version = '0.1.0'
description = 'QuickBooks transaction categorization TUI'
readme = 'README.md'
requires-python = '>=3.11'
license = {text = 'MIT'}
authors = [{name = 'Developer'}]
dependencies = [
    'textual>=0.89.0',
    'intuit-oauth>=1.2.6',
    'httpx>=0.28',
    'aiosqlite>=0.20',
    'tomli>=2.0',
    'cryptography>=44.0',
    'rich>=13.9',
]

[project.optional-dependencies]
dev = [
    'pytest>=8.0',
    'pytest-asyncio>=0.24',
    'pytest-cov>=6.0',
    'ruff>=0.8',
    'respx>=0.22',
]

[project.scripts]
easycat = 'easycat.app:main'

[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[tool.ruff]
line-length = 100
target-version = 'py313'

[tool.ruff.lint]
select = ['E', 'F', 'W', 'I', 'N', 'UP', 'B', 'C4', 'SIM']

[tool.pytest.ini_options]
asyncio_mode = 'auto'
testpaths = ['tests']
addopts = '--cov=easycat --cov-report=term-missing --cov-fail-under=100'

[tool.coverage.run]
branch = true
source = ['easycat']

[tool.coverage.report]
exclude_lines = [
    'pragma: no cover',
    'if TYPE_CHECKING:',
    'if __name__ == .__main__.:',
]
